fixed gap

--- a/dashboard.css
+++ b/dashboard.css
@@ -454,7 +454,6 @@ body {
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
-    margin-left: 24px;
     text-align: center;
     /* margin-bottom: 15px; */
     display: inline-block;
